# decent-key-storage

./: .gitignore  Cargo.toml  README.md  build.rs
proto/: helloworld.proto  info.proto  keys.proto
proto/private/: adding_users.proto
proto/public/: joining.proto  share_cert.proto
src/: client.rs  ddos_client.rs  http_middleware.rs  jsonrpsee_service.rs  saturation_test.rs  server.rs
src/client/: channel.rs  connect_network.rs  connection.rs  cross_ref.rs  custom_tls.rs  global.rs  known_hosts.rs  mod.rs  query_network.rs
src/lib/: client_tools.rs  connection.rs  custom_tls.rs  key_storage.rs  keys.rs  mod.rs  tls.rs
src/lib/client_tools/: connect_network.rs  cross_ref.rs  query_network.rs
src/lib/key_storage/: backend.rs  bimap.rs
src/lib/protocol/: info.rs  mod.rs  proto.rs  server_state.rs  share_cert.rs
src/server/: decen.rs  initial_setup.rs  mod.rs  self_certificates.rs
test_data/: ed25519-cert.der  ed25519-cert.pem  ed25519-key.der  ed25519-key.pem
