[package]
name = "decent-key-storage"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib/mod.rs"

[[bin]]
name = "client"
path = "src/client/mod.rs"

[[bin]]
name = "server"
path = "src/server/mod.rs"

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
clap = { version = "4.5.30", features = ["derive"] }
http = "1.2.0"
hyper = "1.6.0"
hyper-rustls = { version = "0.27.5", features = ["http2"] }
hyper-util = "0.1.10"
prost = "0.13"
rustls = "0.23.23"
rustls-webpki = "0.102.8"
thiserror = "2.0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tonic = { version = "0.12.3", features = ["tls"] }
tower-service = "0.3.3"

[build-dependencies]
tonic-build = "*"
