[package]
name = "decent-key-storage"
version = "0.1.0"
edition = "2025"

[features]
single_thread = []

[lib]
name = "lib"
path = "src/lib/mod.rs"

[[bin]]
name = "client"
path = "src/client/mod.rs"

[[bin]]
name = "server"
path = "src/server/mod.rs"

[[bin]]
name = "saturation_test"
path = "src/saturation_test.rs"

[dependencies]
anyhow = "1.0.95"
arc-swap = "1.7.1"
base64 = "0.22.1"
bytes = "1.10.1"
clap = { version = "4.5.30", features = ["derive"] }
csv = "1.3.1"
env_logger = "0.11.8"
expanduser = "1.2.2"
futures = "0.3.31"
http = "1.2.0"
hyper = "1.6.0"
hyper-rustls = { version = "0.27.5", features = ["http2", "ring", "tls12"] }
hyper-util = { version = "0.1.11", features = ["client-legacy"] }
itertools = "0.14.0"
log = "0.4.27"
once_cell = "1.21.3"
path-absolutize = "3.1.1"
pem = { version = "3.0.5", features = ["serde"] }
pkcs8 = { version = "0.10.2", features = ["alloc", "pem", "std"] }
prost = "0.13"
rand = "0.9.1"
rcgen = "0.13.2"
ring = "0.17.14"
rustls = "0.23.23"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
thiserror = "2.0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-rustls = "0.26.2"
tokio-stream = "0.1.17"
tonic = { version = "^0.13.0", features = ["tls-ring"] }
tower = { version = "0.5.2", features = ["tokio"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
x509-parser = "0.17.0"

[build-dependencies]
tonic-build = "*"

[dev-dependencies]
once_cell = "1.21.3"
